--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,11 @@
-<h1>Pages#home</h1>
+<div class="pages-wrapper">
+  <div class="title">
+    <h1>Abel Farkass</h1>
+    <h2>Photography</h2>
+  </div>
 <p>Find me in app/views/pages/home.html.erb</p>
+</div>
+
 
 
 
