--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,9 +1,6 @@
 <h2>hello</h2>
-
-
 <% @products.each do |product| %>
-  <%= product.created_at %>#
-
-  <%= cl_image_tag product.photo.path %>
-  <br>
+  <div class="image-fit">
+    <%= cl_image_tag product.photo.path %>
+  </div>
 <% end %>
