--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -29,6 +29,18 @@ h2 {
   color: #999999 !important;
 }
 
+p{
+  font-size: 1em !important;
+}
+
 body {
   background-color: #e4e4e4 !important;
+}
+
+body i {
+font-family:'FontAwesome'!important;
+}
+
+a {
+  text-decoration: none !important;
 }
