--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,4 +1,4 @@
-<h1>hi</h1>
+<h1>Upload an Image</h1>
 <%= simple_form_for(@product) do |f| %>
   <%= f.input :title %>
   <%= f.input :photo, as: :attachinary %>
