--- a/app/assets/stylesheets/layouts/_pagestyle.scss
+++ b/app/assets/stylesheets/layouts/_pagestyle.scss
@@ -1,7 +1,11 @@
 .pages-wrapper {
   display: flex;
   background-color: white;
-  height: 100%;
+  height: 100vh;
+  align-items: center;
+  margin-top: -15vh;
+  margin-bottom: -10vh;
+  background-color: #f1f1f1;
 }
 
 .title {
@@ -11,6 +15,26 @@
 }
 
 body {
-  margin: 1em;
   height: 100vh;
+  width: 100vw;
+}
+
+.center-flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+  flex-direction: column;
+}
+
+.content {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 20vw;
+  background-color: white;
+  padding: 2em;
+  box-shadow: 0px 0px 8px #f3f0f0;
+
 }
