--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,16 +3,20 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>TODO</title>
+    <title>Art of Abel</title>
     <%= csrf_meta_tags %>
     <%= action_cable_meta_tag %>
-
     <%= stylesheet_link_tag    'application', media: 'all' %>
-    <%= javascript_include_tag 'application' %>
-    <%= cloudinary_js_config %>
+
+
   </head>
   <body>
-    <%= render 'shared/flashes' %>
-    <%= yield %>
+      <%= render 'shared/navbar' %>
+      <%= render 'shared/flashes' %>
+      <%= yield %>
+
+      <%= render 'shared/footer' %>
+      <%= javascript_include_tag 'application' %>
+      <%= cloudinary_js_config %>
   </body>
 </html>
