categories with proper routing

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -9,7 +9,7 @@
     <div class="content">
       <h3>Website by</h3>
       <h4>Marlon Berdefy</h4>
-      <h4>Contact:</h4>
+      <h4>Contact: berdefymarlon@yahoo.de</h4>
     </div>
   </div>
 </div>
