--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -22,6 +22,7 @@
 
 /* Right section */
 .navbar-wagon-right {
+  width: 20%;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -76,8 +77,10 @@
 
 
 .nav-right{
-  margin-left: 4em;
+  display: flex;
+  justify-content: center;
   color: black !important;
+  font-size: 1.5em;
   a {
     color: black !important;
   }
