--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,22 +10,23 @@
   <!-- Right Navigation -->
   <div class="navbar-wagon-right hidden-xs hidden-sm">
 
-    <div class="dropdown">
-      <i class=" dropdown-toggle" data-toggle="dropdown">Categories</i>
-      <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-          <li>
-            <%= link_to root_path do %>
-              <%= t(".profile", default: "Food") %>
-            <% end %>
-          </li>
-          <li>
-            <%= link_to destroy_user_session_path, method: :delete do %>
-              <%= t(".sign_out", default: "Fashion") %>
-            <% end %>
-          </li>
-      </ul>
-    </div>
+
      <div class="nav-right">
+      <%= link_to pages_fashion_path do %>
+        <%= t(".profile", default: "Fashion") %>
+      <% end %>
+    </div>
+    <div class="nav-right">
+      <%= link_to pages_portrait_path do %>
+        <%= t(".profile", default: "Portrait") %>
+      <% end %>
+    </div>
+    <div class="nav-right">
+      <%= link_to pages_still_path do %>
+        <%= t(".profile", default: "Still") %>
+      <% end %>
+    </div>
+    <div class="nav-right">
       <%= link_to pages_contact_path do %>
         <%= t(".profile", default: "Contact") %>
       <% end %>
