--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -23,15 +23,27 @@
 
 h1, h2, p {
   margin: 0 !important;
+  text-align: center;
+}
+
+
+h1 {
+  font-size: 3em;
+  color: white !important;
 }
 
 h2 {
+  font-size: 2em;
+  margin: 40px 0 0;
   color: #999999 !important;
 }
 
-p{
-  font-size: 1em !important;
+p {
+  font-size: 1.5em;
+  margin-top: .5em;
 }
+
+
 
 body {
   background-color: #e4e4e4 !important;
@@ -43,4 +55,5 @@ font-family:'FontAwesome'!important;
 
 a {
   text-decoration: none !important;
+  color: white !important;
 }
