--- a/app/assets/stylesheets/layouts/_pagestyle.scss
+++ b/app/assets/stylesheets/layouts/_pagestyle.scss
@@ -1,11 +1,11 @@
 .pages-wrapper {
   display: flex;
-  background-color: white;
   height: 100vh;
   align-items: center;
   margin-top: -15vh;
   margin-bottom: -10vh;
-  background-color: #f1f1f1;
+  // background-color: #f1f1f1;
+  background-color: black;
 }
 
 .title {
