--- a/app/assets/stylesheets/layouts/_slidebox.scss
+++ b/app/assets/stylesheets/layouts/_slidebox.scss
@@ -35,23 +35,6 @@ $colorBGdark: #333;
 
 
 
-h1, h2, p {
-  text-align: center;
-}
-
-h1 {
-  font-size: 3em;
-}
-
-h2 {
-  font-size: 2em;
-  margin: 40px 0 0;
-}
-
-p {
-  font-size: 1.5em;
-  margin-top: .5em;
-}
 
 #responsive-sizing {
   text-align: center;
@@ -90,7 +73,9 @@ p {
     position: relative;
     @include flex-parent;
     @include flex-item(1);
-    box-shadow: 0px 0px 80px #888888;
+    // box-shadow: 0px 0px 80px #888888;
+    box-shadow: 0px 0px 80px #bdbdbd47;
+
 
     .left-scroll {
       left: 0;
