--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -69,7 +69,7 @@
   position: absolute;
   right: 10px;
   top: -6px;
-  background-color: white;
+  background-color: grey;
   transform: rotate(45deg);
   border-left: 1px solid #E6E6E6;
   border-top: 1px solid #E6E6E6;
@@ -82,6 +82,6 @@
   color: black !important;
   font-size: 1.5em;
   a {
-    color: white !important;
+    color: #9f9f9f !important;
   }
 }
