--- a/app/assets/stylesheets/layouts/_slidebox.scss
+++ b/app/assets/stylesheets/layouts/_slidebox.scss
@@ -145,6 +145,7 @@ $colorBGdark: #333;
       img {
         height: 70vh;
         max-width: 100%;
+        object-fit: cover;
         top: 0;
         z-index: 0;
         -webkit-transition: all 100ms;
